--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -47,4 +47,35 @@
         </div>
         <div class="col-lg-4"></div>
     </div>
+
+    <br>
+    <div class="row">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-2">
+            <a href="<?= $this->baseUrl('cadastro-idoso') ?>" accesskey="a" style="text-decoration: none;">
+                <button class="btn btn-success btn-block btn-labeled" title="">
+                    <span class="btn-label-secratario"><i class="fas fa-user"></i></span>
+                    <h6>
+                        Cadastrar <br>
+                        <u>I</u>doso <br>
+                    </h6>
+                </button>
+            </a>
+        </div>
+
+        <div class="col-lg-2">
+            <a href="<?= $this->baseUrl('cadastro-deficiente') ?>" accesskey="a" style="text-decoration: none;">
+                <button class="btn btn-success btn-block btn-labeled" title="">
+                    <span class="btn-label-secratario"><i class="fas fa-user"></i></span>
+                    <h6>
+                        Cadastrar <br>
+                        <u>D</u>eficiente <br>
+                    </h6>
+                </button>
+            </a>
+        </div>
+
+        <div class="col-lg-2"></div>
+    </div>
+
 </div>
