--- a/application/layouts/scripts/layout_admin_geral.phtml
+++ b/application/layouts/scripts/layout_admin_geral.phtml
@@ -56,8 +56,8 @@
         </div>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/moment.js') ?>"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.quicksearch/2.3.1/jquery.quicksearch.js"></script
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
-        <script type="text/javascript" src="<?= $this->baseUrl('dist/js/cadastroEstudante.js') ?>"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="<?= $this->baseUrl('dist/js/cadastrosGeral.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/beneficio.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/pt-br.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/jquery-3.3.1.js') ?>"></script>
