--- a/application/views/scripts/beneficio/deficiente.phtml
+++ b/application/views/scripts/beneficio/deficiente.phtml
@@ -9,6 +9,25 @@
         </div>
 
         <div class="col-lg-12">
+            <div class="form-group" formatar SomenteNumero cpf>
+                <a href="<?= $this->baseUrl("beneficio/deficiente") ?>"> <button class="btn btn-default">
+                        <i class="fas fa-search" style="color:black"></i> Pendentes </button></a>
+                <a href="<?= $this->baseUrl("beneficio/deficiente?tipo=1") ?>"> <button class="btn btn-default">
+                        <i class="fas fa-search" style="color:black"></i> Aprovados </button></a>
+                <a href="<?= $this->baseUrl("beneficio/deficiente?tipo=2") ?>"> <button class="btn btn-default">
+                        <i class="fas fa-search" style="color:black"></i> Reprovados </button></a>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <input type="text" placeholder="Digite o CPF" id="buscaCpf" name="buscaCpf" class="btn btn-default" style="width:20%;"
+                       maxlength="14" onchange="validaCPF()" OnKeyPress="formatar('###.###.###-##', this); return SomenteNumero(event)">
+                <button class="btn btn-default" align="right" onclick="window.location.href = 'deficiente' + '?cpf=' + buscaCpf.value">
+                    <i class="fas fa-search" style="color:black"></i>Buscar</button>           
+            </div>      
+        </div>
+
+        <div class="col-lg-12">
             <table class="table text-center" style="background-color:rgba(0,0,0,0.5); color: white">
                 <tr class="text-primary">
                     <th colspan="4">
@@ -16,7 +35,7 @@
                 </th>
                 </tr>
                 <tr>
-                <th><center>CPF</center></th>
+                    <th><center>CPF</center></th>
                 <th><center>Nome</center></th>
                 <th><center>Data de Solicitação</center></th>
                 <th><center>Situação</center></th>
@@ -72,7 +91,7 @@
                                                 <option value="2">Isenção</option>
                                             </select>
                                             <br><br><button type="button" name="conceder" value="Salvar" id="conceder" class="btn btn-success" 
-                                                            onclick="editarBeneficio(<?= $solicitacaobeneficio['id_solicitacao'] ?>, beneficio.value)">Salvar
+                                                            onclick="editarBeneficio(<?= $solicitacaobeneficio['idf_pessoa'] ?>, beneficio.value)">Salvar
                                             </button>
 
                                         </div>
