--- a/application/views/scripts/cadastro-deficiente/index.phtml
+++ b/application/views/scripts/cadastro-deficiente/index.phtml
@@ -59,16 +59,16 @@
                                 <input type="text" class="form-control" id="bairro" placeholder="Bairro">
                             </div>
                             <div class="form-group">
-                                <label for="exampleInputPassword1">Anexe o Comprovante de Residência:</label>
-                                <input type="file" class="form-control" id="comprovanteResidencia" placeholder="Anexo documento que comprove a residência">
+                                <label for="exampleInputPassword1">Deficiência:</label>
+                                <input type="text" class="form-control" id="tipo_deficiencia" placeholder="Digite o tipo da deficiência">
                             </div>
                             <div class="form-group">
-                                <label for="exampleInputPassword1">Anexe o Comprovante de Matrícula:</label>
-                                <input type="file" class="form-control" id="comprovanteMatricula" placeholder="Anexe o comprovante de matrícula">
+                                <label for="exampleInputPassword1">Anexe o Atestado Médico:</label>
+                                <input type="file" class="form-control" id="atestado_medico" placeholder="Atestado médico que comprove a deficiência">
                             </div>
                             
                             <p id="mensagem" style="color:red" ></p>
-                            <button type="button" id="cadastro" disabled="true" class="btn btn-block btn-primary cadastrar">Cadastrar</button>
+                            <button type="button" id="cadastro" class="btn btn-block btn-primary cadastrar">Cadastrar</button>
                             <a href="../public/menuinicial" class="btn btn-block btn-danger btn-primary">Voltar</a>
 
                         </div>
