--- a/application/views/scripts/cadastro-idoso/index.phtml
+++ b/application/views/scripts/cadastro-idoso/index.phtml
@@ -60,15 +60,15 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Anexe o Comprovante de Residência:</label>
-                                <input type="file" class="form-control" id="comprovanteResidencia" placeholder="Anexo documento que comprove a residência">
+                                <input type="file" class="form-control" id="comprovante_residencia" placeholder="Anexo documento que comprove a residência">
                             </div>
                             <div class="form-group">
-                                <label for="exampleInputPassword1">Anexe o Comprovante de Matrícula:</label>
-                                <input type="file" class="form-control" id="comprovanteMatricula" placeholder="Anexe o comprovante de matrícula">
+                                <label for="exampleInputPassword1">Anexe a Carteira do Idoso:</label>
+                                <input type="file" class="form-control" id="carteira_idoso" placeholder="Anexe a carteira do idoso">
                             </div>
                             
                             <p id="mensagem" style="color:red" ></p>
-                            <button type="button" id="cadastro" disabled="true" class="btn btn-block btn-primary cadastrar">Cadastrar</button>
+                            <button type="button" id="cadastro" class="btn btn-block btn-primary cadastrar">Cadastrar</button>
                             <a href="../public/menuinicial" class="btn btn-block btn-danger btn-primary">Voltar</a>
 
                         </div>
