--- a/application/layouts/scripts/layout_admin_local.phtml
+++ b/application/layouts/scripts/layout_admin_local.phtml
@@ -46,6 +46,11 @@
                                 Concessões
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="<?= $this->baseUrl("apolice") ?>">
+                                Apólices
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
