Modificação nas models e controller do funcionario h2

--- a/application/views/scripts/funcionario/index.phtml
+++ b/application/views/scripts/funcionario/index.phtml
@@ -18,7 +18,7 @@
                                     <!--
                                         <option selected label="Selecione um cargo." disabled></option>
                                         <option value="1">Administrador Local</option>
-                                        <option value="2">Administrador Local</option>
+                                        <option value="2">Administrador Geral</option>
                                         <option value="3">Cobrador</option>
                                         <option value="4">Gerente de Recursos Humanos</option>
                                         <option value="5">Motorista</option>
@@ -167,7 +167,7 @@
                             <br>
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <button type="submit" for="exampleFormControlFile1" class="btn btn-success btn-sm btn-block">Pronto</button>
+                                    <button type="submit" for="exampleFormControlFile1" class="btn btn-success btn-sm btn-block cadastrar-funcionario" >Pronto</button>
                                 </div>
                                 <div class="col-sm-6">
                                     <button type="reset" class="btn btn-warning btn-sm btn-block" >Limpar campos</button> 
