--- a/application/views/scripts/menuinicial/index.phtml
+++ b/application/views/scripts/menuinicial/index.phtml
@@ -13,6 +13,9 @@
       <a href="../public/parada-onibus" class="btn btn-block btn-primary">Gerenciar paradas de onibus</a>
       <br>
       <a href="../public/forma-pagamento" class="btn btn-block btn-primary">Gerenciar formas de pagamento</a>
+      <br>
+      <a href="../public/manutencao" class="btn btn-block btn-primary">Gerenciar manutenções</a>
+
 </div>
 </div>
 </div>
